--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -11,9 +11,9 @@
 	<h1>Female Popstars and their iconic hit numbers</h1> 
 </div>
 <div>
-	<section><p>Camila Cabello-Havana</p><p>Havana, the pop anthem dedicated to her roots by the Cuban American songstress is very catchy and it is indeed a cultural reset.</p></section>
-	<section><p>Taylor Swift-Blank Space</p><p>Taylor Swift conceived the song as a satirical self-referential nod to her reputation as a flirtatious woman with a series of romantic attachments.</p></section>
-	<section><p>Billie Eilish-bad guy</p><p>In this song, Eilish touches on themes about misandry and sarcasm. </p></section>
+	<section class="col-sm-12" class="col-md-6" class="col-lg-4" class="container"><p class="p1">Camila Cabello-Havana</p><p class="p2">Havana, the pop anthem dedicated to her roots by the Cuban American songstress is very catchy and it is indeed a cultural reset.</p></section>
+	<section class="col-sm-12" class="col-md-6" class="col-lg-4" class="container"><p class="p1">Taylor Swift-Blank Space</p><p class="p2">Taylor Swift conceived the song as a satirical self-referential nod to her reputation as a flirtatious woman with a series of romantic attachments.</p></section>
+	<section class="col-sm-12" class="col-md-6" class="col-lg-4" class="container"><p class="p1">Billie Eilish-bad guy</p><p class="p2">In this song, Eilish coolly touches on themes about misandry and sarcasm.</p></section>
 </div>
 </body>
 </html>
