--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -7,8 +7,8 @@
 	<title>Module 2 Assignment</title>
 </head>
 <body>
-<div>
-	<h1 class="row">Female Popstars and their iconic hit numbers</h1> 
+<div class="row">
+	<h1>Female Popstars and their iconic hit numbers</h1> 
 </div>
 <div>
 	<section class="col-sm-12" class="col-md-6" class="col-lg-4" class="container"><p class="p1">Camila Cabello-Havana</p><p class="p2">Havana, the pop anthem dedicated to her roots by the Cuban American songstress is very catchy and it is indeed a cultural reset.</p></section>
