--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,8 +10,8 @@
 <div class="row">
 	<h1>Female Popstars and their iconic hit numbers</h1> 
 </div>
-<div class="col-sm-12" class="col-md-6" class="col-lg-4" class="container"><p>Havana, the pop anthem dedicated to her roots by the Cuban American songstress is very catchy and it is indeed a cultural reset.</p> <p id="p1">Camila Cabello-Havana</p> </div>
-<div class="col-sm-12" class="col-md-6" class="col-lg-4" class="container"><p>Taylor Swift conceived the song as a satirical self-referential nod to her reputation as a flirtatious woman with a series of romantic attachments.</p><p id="p2">Taylor Swift-Blank Space</p> </div>
-<div class="col-sm-12" class="col-md-12" class="col-lg-4" class="container"><p>In this song, Eilish coolly touches on themes about misandry and sarcasm.</p><p id="p3">Billie Eilish-bad guy</p></div>
+<div class="col-sm-12" class="col-md-6" class="col-lg-4" id="container"><p>Havana, the pop anthem dedicated to her roots by the Cuban American songstress is very catchy and it is indeed a cultural reset.</p> <p id="p1">Camila Cabello-Havana</p> </div>
+<div class="col-sm-12" class="col-md-6" class="col-lg-4" id="container"><p>Taylor Swift conceived the song as a satirical self-referential nod to her reputation as a flirtatious woman with a series of romantic attachments.</p><p id="p2">Taylor Swift-Blank Space</p> </div>
+<div class="col-sm-12" class="col-md-12" class="col-lg-4" id="container"><p>In this song, Eilish coolly touches on themes about misandry and sarcasm.</p><p id="p3">Billie Eilish-bad guy</p></div>
 </body>
 </html>
