--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -10,15 +10,15 @@
 <div class="row">
 	<h1>Female Popstars and their iconic hit numbers</h1> 
 </div>
-<section class="col-lg-4 col-md-6 col-sm-12" class="container">
+<section class="col-lg-4 col-md-6 col-sm-12 container">
 	<p>"Havana", the pop anthem dedicated to her roots by the Cuban American songstress is very catchy and it is indeed a cultural reset.
 	</p> <p id="p1">Camila</p> 
 </section>
-<section class="col-lg-4 col-md-6 col-sm-12" class="container">
+<section class="col-lg-4 col-md-6 col-sm-12 container">
 	<p>Taylor Swift conceived "Blank Space" as a satirical self-referential nod to her reputation as a flirtatious woman with a series of romantic attachments.</p>
 	<p id="p2">Taylor</p> 
 </section>
-<section class="col-lg-4 col-md-12 col-sm-12" class="container">
+<section class="col-lg-4 col-md-12 col-sm-12 container">
 	<p>In the song "bad guy", Eilish coolly touches on themes about misandry and sarcasm.</p>
 	<p id="p3">Billie</p>
 </section>
