--- a/mod4/module4-solution/easier/index.html
+++ b/mod4/module4-solution/easier/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
-  <h2>Please check console for the output</h2>
+  <h2>PHi there, please check console for the output</h2>
 </body>
 </html>
